# Culprit

./: .gitattributes  .gitignore  CASE-STUDY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  SPEC_VERSION.md  docker-compose.yml  go.mod
docs/: 00-INDEX.md  01-problem-landscape.md  02-product-decision.md  03-architecture.md  04-folder-structure.md  05-database.md  06-api-design.md  07-ai-architecture.md  08-ui-design.md  09-infrastructure.md  10-roadmap.md  11-resume-interviews.md  good-first-issues.md
scripts/: README.md  export_incidents.py  seed-issues.sh
services/ai-reasoning/: pyproject.toml
services/ai-reasoning/ai_reasoning/: explain.py  model.py
services/ai-reasoning/tests/: conftest.py  test_cli_explain.py  test_explain.py
services/correlation-engine/: pyproject.toml
services/correlation-engine/correlation_engine/: cli.py  embeddings.py  evaluation.py  knowledge_graph.py  memory.py  pipeline.py
services/correlation-engine/correlation_engine/collection/: adapters.py  store.py
services/correlation-engine/correlation_engine/db/: postgres.py  schema.sql
services/correlation-engine/correlation_engine/harness/: schema.py
services/correlation-engine/correlation_engine/harness/scenarios/: README.md  __init__.py  alert_storm.py  bad_configmap.py  bad_rollout.py  bad_secret.py  broken_scraping.py  crash_loop_backoff.py  deadlock.py  dns_failure.py  feature_flag_failure.py  image_pull_backoff.py  mesh_routing.py  missing_metrics.py  network_policy_block.py  oom_killed.py  pool_exhaustion.py  slow_query.py  terraform_drift.py  terraform_iam_break.py
services/correlation-engine/correlation_engine/ranking/: confidence.py  rules.py
services/correlation-engine/tests/: test_cli.py  test_collection.py  test_embeddings.py  test_evaluation.py  test_memory.py  test_postgres.py  test_scenarios.py
(+71 files in other folders)
