[project]
name = "correlation-engine"
version = "0.1.0"
description = "Deterministic Rule Engine + Knowledge Graph correlation. See docs/07-ai-architecture.md and SPEC_VERSION.md."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
